[package]
name = "sat"
version = "0.1.0"
authors = ["Pontjho Mokhonoana <pontjho@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "1.0"
#wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.3"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

#![feature(custom_attribute)]